mls home and mls navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src//assets//MTU_MMINI_LEAGUE_LOGO-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MTU SPORT ARENA</title>
+    <title>MTU SPORTS ARENA</title>
   </head>
   <body>
     <div id="root"></div>
